Add email sender feature
